# askanna-python

./: .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitpod-vscode-settings.json  .gitpod.yml  .markdownlint.yaml  .mdlrc  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
askanna/: __init__.py  init.py  job.py  run.py  settings.py  variable.py
askanna/cli/: __init__.py  __main__.py  artifact.py  create.py  createproject.py  deploy.py  exceptions.py  init.py  job.py  jobrun_manifest.py  login.py  logout.py  package_download.py  payload.py  project.py  push.py  result.py  run.py  tool.py  upload_result.py  utils.py  variable.py  workspace.py
askanna/cli/core/: apiclient.py  config.py  session.py  upload.py  user.py  variables.py
askanna/cli/run_utils/: __init__.py  __main__.py  get_package.py  get_payload.py  get_run_manifest.py  push_artifact.py  push_metrics.py  push_result.py  push_variables.py  tool.py  utils.py
askanna/config/: __init__.py  api_url.py  project.py  server.py  utils.py
askanna/core/: __init__.py  apiclient.py  auth.py  collector.py  config.py  dataclasses.py  download.py  exceptions.py  job.py  metrics.py  project.py  push.py  result.py  run.py  session.py  upload.py  utils.py  variable.py  variables_tracked.py  workspace.py
askanna/core/dataclasses/: base.py  job.py  package.py  project.py  relation.py  run.py  variable.py  workspace.py
askanna/core/utils/: at_exit.py  file.py  main.py  object.py  settings.py  suuid.py  validate.py
askanna/gateways/: api_client.py  auth.py  job.py  package.py  project.py  run.py  utils.py  variable.py  workspace.py
askanna/sdk/: job.py  mixins.py  package.py  project.py  run.py  track.py  variable.py  workspace.py
askanna_cli/: __init__.py  __main__.py  artifact.py  createproject.py  deploy.py  exceptions.py  init.py  jobrun_manifest.py  login.py  logout.py  mock.py  package.py  package_download.py  payload.py  push.py  run.py  tool.py  upload_result.py  utils.py  variable.py
askanna_cli/core/: apiclient.py  config.py  session.py  upload.py  user.py
docs/: Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
tests/: base.py  conftest.py  create_fake_files.py  test_cli_job.py  test_cli_login.py  test_cli_logout.py  test_cli_push.py  test_core_project.py  test_core_run.py  test_core_workspace.py  test_sdk_import.py  test_sdk_metrics.py  test_utils_types.py  test_validate_yml.py  utils.py
tests/cli/: base.py  test_cli_artifact.py  test_cli_create.py  test_cli_init.py  test_cli_job.py  test_cli_login.py  test_cli_logout.py  test_cli_main.py  test_cli_project.py  test_cli_push.py  test_cli_result.py  test_cli_workspace.py
tests/cli/run_utils/: test_cli_base.py  test_cli_get_package.py  test_cli_main.py  test_cli_push_artifact.py
tests/config/: test_config_base.py  test_config_project.py  test_config_server.py  test_config_utils.py
tests/core/: test_core_config.py  test_core_download.py  test_core_project.py  test_core_run.py  test_core_workspace.py
tests/core/utils/: test_content_type_file_extension.py  test_extract_push_target.py  test_getfiles.py  test_numpy_dtypes.py  test_types.py  test_utils.py  test_validate_yml.py  test_zip.py
tests/fixtures/files/: result.json  run_manifest.sh
tests/fixtures/projects/project-001-simple/: askanna.yml  test.py
tests/fixtures/projects/project-002-directories/: askanna.yml  select-best-model.py
tests/fixtures/projects/project-002-directories/src/: train.py
tests/fixtures/projects/project-003-subdirectories/: .askannaignore  .gitignore  README.md  askanna.yml  askannaignore
tests/fixtures/projects/project-003-subdirectories/data/: dump.txt
tests/fixtures/projects/project-003-subdirectories/notebooks/: demo-result.ipynb
tests/fixtures/projects/project-003-subdirectories/result/: evaluation.json  (+1 more)
tests/fixtures/projects/project-004-wrong-config/: askanna.yml
tests/fixtures/responses/: auth.py  job.py  package.py  project.py  run.py  variable.py  workspace.py
tests/fixtures/responses/api/: __init__.py  artifact.py  auth.py  job.py  package.py  project.py  result.py  run.py  variable.py  workspace.py
tests/resources/projects/project-001-simple/: askanna.yml  result.json  test.py
tests/resources/projects/project-002-directories/: requirements.txt  select-best-model.py
tests/resources/projects/project-003-subdirectories/: requirements.txt  requirements_multiple-models.txt
tests/sdk/: test_sdk_result.py  test_sdk_variables.py
tests/test_cli/: test_artifact.py  test_cli_base.py  test_cli_login.py  test_cli_logout.py  test_cli_push.py  test_cli_result.py  test_create.py  test_init.py  test_job.py  test_project.py  test_push.py  test_run.py  test_utils.py  test_variable.py  test_workspace.py
tests/test_cli/test_run_utils/: test_cli_base.py  test_get_package.py  test_get_payload.py  test_get_run_manifest.py  test_push_artifact.py  test_push_metrics.py  test_push_result.py  test_push_variables.py
tests/test_config/: test_config_api_url.py  test_config_base.py  test_config_project.py  test_config_server.py  test_config_utils.py
tests/test_core/: test_core_download.py  test_core_run.py  test_upload.py
tests/test_core/test_dataclasses/: test_base.py  test_job.py  test_package.py  test_project.py  test_relation.py  test_run.py  test_variable.py  test_workspace.py
tests/test_core/test_utils/: test_content_type_file_extension.py  test_getfiles.py  test_numpy_dtypes.py  test_utils.py  test_validate_yml.py  test_zip.py
tests/test_gateways/: test_auth.py  test_job.py  test_package.py  test_project.py  test_run.py  test_workspace.py
tests/test_sdk/: test_job.py  test_project.py  test_run.py  test_sdk_import.py  test_sdk_metrics.py  test_sdk_result.py  test_sdk_variables.py  test_workspace.py
(+11 files in other folders)
